@@ -1,6 +1,6 @@
 #    README for shady_KISS-skin for vdr-plugin-skindesigner
 #
-#    Copyright (C) 2015   Tomas Saxer <tsaxer@gmx.de> 
+#    Copyright (C) 2015 - 2016   Tomas Saxer <tsaxer@gmx.de> 
 #
 #    This program is free software; you can redistribute it and/or modify it under the terms of 
 #    the GNU General Public License as published by the Free Software Foundation; either 
