@@ -60,6 +60,7 @@
 			<parameter type="bool" name="longElapsedBar" displaytext="{tr(longElapsedBar)}">0</parameter>
 			<parameter type="bool" name="showTimeshiftTotal" displaytext="{tr(showTimeshiftTotal)}">1</parameter>
 			<parameter type="bool" name="showDiscUsage" displaytext="{tr(showDiscUsage)}">1</parameter>
+			<parameter type="bool" name="showNumbering" displaytext="{tr(showNumbering)}">1</parameter>
 		</submenu>
 	</menu>
     <!--
@@ -165,6 +166,10 @@
 		<token name="tr(showDiscUsage)">
 			<trans lang="en_EN">Show discusage in recordings- and timersmenu</trans>
 			<trans lang="de_DE">Zeige Festplattenausnutzung im Aufnahmen- und Timermenü</trans>
+		</token>
+		<token name="tr(showNumbering)">
+			<trans lang="en_EN">Show numbering in main- and setupmenu</trans>
+			<trans lang="de_DE">Zeige Nummerierung im Haupt- und Setupmenü</trans>
 		</token>
 <!--channelInfo-->
 		<token name="tr(channelInfo)">
