@@ -209,10 +209,14 @@
 				<drawimage condition="{current}++eq({indexcoloredButtons}, 1)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG_Color" />
 				<drawimage condition="{current}++eq({indexcoloredButtons}, 0)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG" />
 			</area>
-			<area x="59%" width="2%" layer="3">
+			<area condition="{showNumbering}" x="59%" width="2%" layer="3">
 				<drawtext x="0" valign="center" align="right" font="{light}" fontsize="70%" color="{clrLightGray}" text="{number}" />
 			</area>
-			<areascroll scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="62%" width="33%" layer="3">
+			<areascroll condition="{showNumbering}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="62%" width="33%" layer="3">
+				<drawtext condition="{current}" name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{label}" />
+				<drawtext condition="not{current}" name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{label}" />
+			</areascroll>
+			<areascroll condition="not{showNumbering}" scrollelement="menutext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="59%" width="36%" layer="3">
 				<drawtext condition="{current}" name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{label}" />
 				<drawtext condition="not{current}" name="menutext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{label}" />
 			</areascroll>
