@@ -1,5 +1,8 @@
 shady-KISS-skin History
 -------------------------------------------
+2016-01-08:
+- Added setup for numbering in main- and setupmenu
+
 2015-09-10:
 - Removed some useless code
 
